# chromaprint

./: .bzrignore  .gitignore  .gitlab-ci.yml  .travis.yml  .vimrc  CHANGES.txt  CMakeLists.txt  LICENSE.md  NEWS.txt  README.md  README.txt  bitbucket-pipelines.yml  chromaprint-config.cmake  config.h.in  libchromaprint.pc.cmake
.github/: FUNDING.yml
.github/workflows/: build.yml
cmake/: ChromaprintConfig.cmake.in
cmake/modules/: FindFFTS.cmake  FindFFmpeg.cmake  FindGTest.cmake  FindKissFFT.cmake  FindZstd.cmake
debian/: changelog  control  copyright  docs  libchromaprint-dev.install  rules  watch
examples/: CMakeLists.txt  Info.plist  fpcalc.c
package/: build-fpcalc.sh  build-lib.sh  build.sh  toolchain-aarch64.cmake.in  toolchain-mingw-i686.cmake  toolchain-mingw-x86_64.cmake  toolchain-mingw.cmake.in
python/: LICENSE  setup.py
python/chromaprint/: __init__.py
python/examples/: fpwav.py
scripts/: gen_bit_writer.py  gen_pack_array_utils.sh
src/: CMakeLists.txt  audio_consumer.h  audio_processor.cpp  audio_processor.h  base64.cpp  base64.h  bit_string_reader.h  bit_string_writer.h  chroma.cpp  chroma.h  chroma_filter.cpp  chroma_filter.h  chroma_normalizer.h  chroma_resampler.cpp  chroma_resampler.h  chromaprint.cpp  chromaprint.h  classifier.h  combined_buffer.h  debug.h  decoder.h  feature_vector_consumer.h  fft.cpp  fft.h  fft_frame.h  fft_frame_consumer.h  fft_lib.h  fft_lib_avfft.cpp  fft_lib_avfft.h  fft_lib_avtx.cpp  fft_lib_avtx.h  fft_lib_ffts.cpp  fft_lib_ffts.h  fft_lib_fftw3.cpp  fft_lib_fftw3.h  fft_lib_kissfft.cpp  fft_lib_kissfft.h  fft_lib_vdsp.cpp  fft_lib_vdsp.h  fft_test.cpp  (+35 more)
src/audio/: audio_slicer.h  audio_slicer_test.cpp  ffmpeg_audio_processor.h  ffmpeg_audio_processor_avresample.h  ffmpeg_audio_processor_swresample.h  ffmpeg_audio_reader.h
src/avresample/: avcodec.h
src/cmd/: CMakeLists.txt  fpcalc.cpp  fpcmp.Info.plist.in  fpcmp.cpp
src/ext/: ffmpeg_decoder.h  image_utils.cpp  image_utils.h
src/include/: chromaprint.h
src/utils/: base64.cpp  base64.h  gaussian_filter.h  gradient.h  pack_int3_array.h  pack_int5_array.h  rolling_integral_image.h  scope_exit.h
tests/: CMakeLists.txt  audio_buffer.h  test_api.cpp  test_audio_processor.cpp  test_base64.cpp  test_bit_string_reader.cpp  test_bit_string_writer.cpp  test_chroma.cpp  test_chroma_filter.cpp  test_chroma_resampler.cpp  test_chromaprint.cpp  test_combined_buffer.cpp  test_filter.cpp  test_filter_utils.cpp  test_fingerprint_calculator.cpp  test_fingerprint_compressor.cpp  test_fingerprint_compressor_v2.cpp  test_fingerprint_decompressor.cpp  test_fingerprint_matcher.cpp  test_integral_image.cpp  test_lloyds.cpp  test_moving_average.cpp  test_quantizer.cpp  test_silence_remover.cpp  test_simhash.cpp  test_utils.cpp  test_utils.h  test_utils_gaussian_filter.cpp  test_utils_gradient.cpp
tests/data/: test.mp3.fpcalc.out
tools/: CMakeLists.txt  aspec.cpp  chromagram.cpp  fpcollect.cpp  fpeval.cpp  fpgen.cpp  fpsubmit.py  learn_filters.cpp
